--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
 	<head>
         <script src="http://code.createjs.com/createjs-2013.12.12.min.js"></script>
-		<script src="template.js"></script>
+		<script src="game.js"></script>
 		<title>Level Creator</title>
 	</head>
 	<body>
-        <center>
+        <center class="game">
             <div id="levelCreator"></div>
+        </center>
+		<center class="game">
+            <div id="gameTest"></div>
         </center>
 	</body>
 </html>
